--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
     mavenCentral()
 }
 
+test{
+    useJUnitPlatform()
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
