--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,5 @@ test{
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
 }
